<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainFragment">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar_main"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="?attr/colorPrimary"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:menu="@menu/menu_main"
        app:title="@string/app_name" />

    <TextView
        android:id="@+id/textView_Power"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/app_power"
        android:textColor="@android:color/holo_orange_light"
        android:textSize="32sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar_main" />

    <ImageButton
        android:id="@+id/imgBtn_Power"
        android:layout_width="144dp"
        android:layout_height="144dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/image_button"
        android:scaleType="centerInside"
        android:src="@drawable/power"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView_Power" />

    <TextView
        android:id="@+id/textView_Input"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/app_input"
        android:textColor="@android:color/holo_blue_dark"
        android:textSize="32sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imgBtn_Power" />

    <Button
        android:id="@+id/button_DisplayPort1"
        android:layout_width="240dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:insetTop="0dp"
        android:insetBottom="0dp"
        android:padding="16dp"
        android:text="@string/app_displayport1"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView_Input" />

    <Button
        android:id="@+id/button_DisplayPort2"
        android:layout_width="240dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:insetTop="0dp"
        android:insetBottom="0dp"
        android:padding="16dp"
        android:text="@string/app_displayport2"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_DisplayPort1" />

    <Button
        android:id="@+id/button_HDMI1"
        android:layout_width="240dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:insetTop="0dp"
        android:insetBottom="0dp"
        android:padding="16dp"
        android:text="@string/app_hdmi1"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_DisplayPort2" />

    <Button
        android:id="@+id/button_HDMI2"
        android:layout_width="240dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:insetTop="0dp"
        android:insetBottom="0dp"
        android:padding="16dp"
        android:text="@string/app_hdmi2"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/button_HDMI1" />
</androidx.constraintlayout.widget.ConstraintLayout>