<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SettingFragment">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar_setting"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="?attr/colorPrimary"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:navigationIcon="?attr/homeAsUpIndicator"
        app:title="@string/app_settings" />

    <TextView
        android:id="@+id/textView_Host"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="32dp"
        android:text="@string/app_hostname"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar_setting" />

    <TextView
        android:id="@+id/textView_Port"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/app_hostport"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="@+id/textView_Host"
        app:layout_constraintTop_toBottomOf="@+id/textView_Host" />

    <EditText
        android:id="@+id/editText_Host"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="-12dp"
        android:ems="10"
        android:inputType="textWebEditText"
        app:layout_constraintStart_toEndOf="@+id/textView_Host"
        app:layout_constraintTop_toTopOf="@+id/textView_Host" />

    <EditText
        android:id="@+id/editText_Port"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="-12dp"
        android:ems="5"
        android:inputType="number"
        app:layout_constraintStart_toEndOf="@+id/textView_Port"
        app:layout_constraintTop_toTopOf="@+id/textView_Port" />

</androidx.constraintlayout.widget.ConstraintLayout>